--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="card-header bg-transparent border-info"> <strong> LOGO</strong></div>
         <div class="card-body">
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Enter a city" aria-label="city"
+                <input type="text" class="form-control" placeholder="Enter a city here..." aria-label="city"
                     aria-describedby="button-addon2">
                 <button class="btn btn-outline-info" type="button" id="search-form">Search</button>
                 <button class="btn btn-outline-secondary" type="button" id="location">Current</button>
