add github link

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     <h1 id="temperature">28°</h1>
                     <button type="button" class="btn btn-link" id="celsius">C</button>
                     <button type="button" class="btn btn-link" id="fahr">F</button>
-                    <h3 id = "description">Sunny</h3>
+                    <h3 id="description">Sunny</h3>
                 </div>
                 <div class="col-4 ">
                     <h5>Precipitation: 30%</h5>
-                    <h5 >Humidity: <span id="humidity">60</span>% </h5>
+                    <h5>Humidity: <span id="humidity">60</span>% </h5>
                     <h5>Wind: <span id="wind">3</span> km/h </h5>
                 </div>
             </div>
@@ -68,8 +68,15 @@
                 </div>
 
             </div>
+
+        </div>
+        <div class="col align-self-center">
+
+            <a href="https://github.com/Mirihoyer/Weather-App.git" class="link-info">Open code by Miriam Hoyer</a>
+
         </div>
     </div>
+
     <script src="src/app.js"></script>
 </body>
 
